--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - node-modules-{{ checksum "package.json" }} 
+            - node-modules-{{ checksum "package.json" }}
       - run:
           name: Install Node Modules
           command: npm install
@@ -42,7 +42,13 @@ jobs:
           at: .
       - run:
           name: Install Postgres
-          command: sudo circleci-install postgres
+          command: |
+            sudo apt-get update
+            apt-cache search postgresql
+            sudo apt-get install postgresql-9.3 postgresql-client-9.3 # sudo circleci-install postgres
+            sudo cat /etc/postgresql/9.3/main/pg_hba.conf
+            sudo bash -c 'echo "local all all trust" >> /etc/postgresql/9.3/main/pg_hba.conf'
+            sudo /etc/init.d/postgresql restart
       - run:
           name: Start Server
           command: |
